@startuml

title __EDITPROFILE's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      class com.architectica.socialcomponents.main.editProfile.EditProfileActivity {
          + skillTypes : String[]
          + userTypes : String[]
          ~ CallBacks : OnVerificationStateChangedCallbacks
          ~ browseUrl : Button
          ~ i : int
          ~ pd : ProgressDialog
          ~ resendingToken : ForceResendingToken
          ~ verify : Button
          ~ verifyLayout : LinearLayout
          ~ verifyPhone : Button
          {static} - TAG : String
          - avatarProgressBar : ProgressBar
          - bioEditText : EditText
          - mEditTextSixDigitCode : EditText
          - nameEditText : EditText
          - phoneNumberEditText : EditText
          - phoneVerifyId : String
          - skillEditText : AutoCompleteTextView
          - startUpTypeEditText : AutoCompleteTextView
          - uriEditText : EditText
          - usertype1 : AutoCompleteTextView
          + createPresenter()
          + getBioText()
          + getImageView()
          + getNameText()
          + getNumber()
          + getProgressView()
          + getSkill()
          + getUsertypeText()
          + getUseruriText()
          + onCreateOptionsMenu()
          + onImagePikedAction()
          + onOptionsItemSelected()
          + setBio()
          + setName()
          + setNameError()
          + setPhoneNumber()
          + setProfilePhoto()
          + setSkill()
          + setSkillError()
          + setUsertype()
          + setUseruri()
          # initContent()
          # onActivityResult()
          # onCreate()
          - signInWithPhoneAuthCredential()
          - verifyCode()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      class com.architectica.socialcomponents.main.editProfile.EditProfilePresenter {
          + attemptCreateProfile()
          + loadProfile()
          # EditProfilePresenter()
          # onProfileUpdatedSuccessfully()
          - createOrUpdateProfile()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      interface com.architectica.socialcomponents.main.editProfile.EditProfileView {
          {abstract} + getBioText()
          {abstract} + getNameText()
          {abstract} + getNumber()
          {abstract} + getSkill()
          {abstract} + getUsertypeText()
          {abstract} + getUseruriText()
          {abstract} + setBio()
          {abstract} + setName()
          {abstract} + setNameError()
          {abstract} + setPhoneNumber()
          {abstract} + setProfilePhoto()
          {abstract} + setSkill()
          {abstract} + setSkillError()
          {abstract} + setUsertype()
          {abstract} + setUseruri()
      }
    }
  }
  

  com.architectica.socialcomponents.main.editProfile.EditProfileActivity .up.|> com.architectica.socialcomponents.main.editProfile.EditProfileView
  com.architectica.socialcomponents.main.editProfile.EditProfileActivity -up-|> com.architectica.socialcomponents.main.pickImageBase.PickImageActivity
  com.architectica.socialcomponents.main.editProfile.EditProfileActivity o-- com.architectica.socialcomponents.views.CircularImageView : imageView
  com.architectica.socialcomponents.main.editProfile.EditProfilePresenter -up-|> com.architectica.socialcomponents.main.pickImageBase.PickImagePresenter
  com.architectica.socialcomponents.main.editProfile.EditProfilePresenter o-- com.architectica.socialcomponents.model.Profile : profile
  com.architectica.socialcomponents.main.editProfile.EditProfilePresenter o-- com.architectica.socialcomponents.managers.ProfileManager : profileManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
